--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e8d0693a",
+   "id": "1f60118f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "43dfc5c9",
+   "id": "e0c45290",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7350ebae",
+   "id": "df54d310",
    "metadata": {},
    "source": [
     "# Functions"
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7649b1b8",
+   "id": "6afbdebd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ad5ee627",
+   "id": "7903ac9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4a7c7c2",
+   "id": "11357558",
    "metadata": {},
    "source": [
     "# Reading the CSV files"
@@ -142,16 +142,17 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8e69c435",
+   "id": "c59c5720",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Set file path variable\n",
     "file = \"Resources/\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3293de7c",
+   "id": "f1dd0c25",
    "metadata": {},
    "source": [
     "### Oil Data Frame & Plot"
@@ -160,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4e607b74",
+   "id": "08bd7f42",
    "metadata": {},
    "outputs": [
     {
@@ -332,6 +333,7 @@
     }
    ],
    "source": [
+    "#Read oil csv file and show data frame\n",
     "oil_df = pd.read_csv(file + \"oil_csv.csv\")\n",
     "oil_df"
    ]
@@ -339,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "78a8e4fc",
+   "id": "00afeaed",
    "metadata": {},
    "outputs": [
     {
@@ -356,12 +358,13 @@
     }
    ],
    "source": [
+    "#Plot function for historical oil data\n",
     "date_close_plot(oil_df)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5f6bb9da",
+   "id": "8c9f0929",
    "metadata": {},
    "source": [
     "### Gold Data Frame & Plot"
@@ -370,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a9db2841",
+   "id": "b760d63c",
    "metadata": {},
    "outputs": [
     {
@@ -542,6 +545,7 @@
     }
    ],
    "source": [
+    "#Read csv file and show data frame\n",
     "gold_df = pd.read_csv(file+\"gold_csv.csv\")\n",
     "gold_df"
    ]
@@ -549,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "90682593",
+   "id": "6d8c9acc",
    "metadata": {},
    "outputs": [
     {
@@ -566,12 +570,13 @@
     }
    ],
    "source": [
+    "#Plot function for historically for gold\n",
     "date_close_plot(gold_df)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9082fd2b",
+   "id": "014396a6",
    "metadata": {},
    "source": [
     "### S&P500 Data Frame & Plot"
@@ -580,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "12f07298",
+   "id": "7d17ab09",
    "metadata": {},
    "outputs": [
     {
@@ -752,6 +757,7 @@
     }
    ],
    "source": [
+    "#Read csv file and show data frame\n",
     "sp500_df = pd.read_csv(file + \"sphq_csv.csv\")\n",
     "sp500_df"
    ]
@@ -759,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "126693d0",
+   "id": "7752de5f",
    "metadata": {},
    "outputs": [
     {
@@ -776,12 +782,13 @@
     }
    ],
    "source": [
+    "#Plot function for sp500 historical\n",
     "date_close_plot(sp500_df)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "21837333",
+   "id": "217c41f7",
    "metadata": {},
    "source": [
     "### Bitcoin Data Frame & Plot"
@@ -790,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "01e0ead2",
+   "id": "c989c6be",
    "metadata": {},
    "outputs": [
     {
@@ -975,6 +982,7 @@
     }
    ],
    "source": [
+    "#Read csv file to notebook and display data frame\n",
     "bitcoin_df = pd.read_csv(file + \"btc_joined.csv\")\n",
     "bitcoin_df"
    ]
@@ -982,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "18f85ae4",
+   "id": "77d7155e",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ea38dbf",
+   "id": "c9d95f8b",
    "metadata": {},
    "source": [
     "# Gold, S&P500, and OIL in One Chart"
@@ -1013,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b2d778d7",
+   "id": "a6232cbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "397b2ffc",
+   "id": "582c93ff",
    "metadata": {},
    "outputs": [
     {
@@ -1041,6 +1049,7 @@
     }
    ],
    "source": [
+    "#Plot oil, gold, and sp500 on one chart for comparison\n",
     "plt.figure(figsize = (20,10))\n",
     "plt.plot(gold_df2['date'],gold_df2['close'], color = 'gold', label = \"Gold\")\n",
     "plt.plot(sp500_df2['date'],sp500_df2['close'], color = 'green', label = \"S&P500\")\n",
@@ -1080,7 +1089,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "536f28b8",
+   "id": "ddff5fbe",
    "metadata": {},
    "source": [
     "# Correlation Charts"
@@ -1089,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "040aadaa",
+   "id": "80166854",
    "metadata": {},
    "outputs": [
     {
@@ -1113,13 +1122,14 @@
     }
    ],
    "source": [
+    "#Plot function for oil and bitcoin\n",
     "join_and_graph(oil_df,bitcoin_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "121167e2",
+   "id": "59d1031c",
    "metadata": {},
    "outputs": [
     {
@@ -1143,13 +1153,14 @@
     }
    ],
    "source": [
+    "#Plot function for sp500 and bitcoin\n",
     "join_and_graph(sp500_df,bitcoin_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f5386e1c",
+   "id": "3773c5da",
    "metadata": {},
    "outputs": [
     {
@@ -1173,12 +1184,13 @@
     }
    ],
    "source": [
+    "#Plot function for gold and bitcoin\n",
     "join_and_graph(gold_df,bitcoin_df)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2ee78932",
+   "id": "0ded881a",
    "metadata": {},
    "source": [
     "# BTC Short-term Investment of 6 Months"
@@ -1187,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fd175640",
+   "id": "c21119ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1199,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a5a57d8e",
+   "id": "b21821fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4d64a3f4",
+   "id": "3d57e2b6",
    "metadata": {},
    "outputs": [
     {
@@ -1505,13 +1517,14 @@
     }
    ],
    "source": [
+    "#Show dataframe\n",
     "compare_btc_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "74f48724",
+   "id": "36cff706",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d7c89270",
+   "id": "80252d38",
    "metadata": {},
    "outputs": [
     {
@@ -1641,7 +1654,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c0b2e60f",
+   "id": "75842469",
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b0fc135",
+   "id": "5b199f63",
    "metadata": {},
    "source": [
     "This visualization shows in percentage how much return there is for each day since 2018 if the Bitcoin amount was sold exactly six months after it was bought. Meaning, if an investment is made for six months in Bitcoin, there is the posibility of making great profits, as we see the peaks in the visualization, from 100% to more than 600%. However, it is clear that a good proportion of the time the returns are negative, incurring losses. The proportion is that 57.16% of the time it would result in profits and 42.84% of the time it would result in losses. That indicates, Bitcoin is moderate or risky for short-term investment."
@@ -1705,7 +1718,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f34b74b8",
+   "id": "bddfa381",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1717,7 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "355820ff",
+   "id": "8be0b1b6",
    "metadata": {},
    "outputs": [
     {
@@ -1740,7 +1753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d21c10b",
+   "id": "2870247e",
    "metadata": {},
    "source": [
     "# SP500 5 YRS Percentage Change"
@@ -1749,7 +1762,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "35d63f5b",
+   "id": "ca738d7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1763,7 +1776,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "06a5ae71",
+   "id": "e469b23e",
    "metadata": {},
    "outputs": [
     {
@@ -1933,7 +1946,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aca03eb",
+   "id": "aa51ed6d",
    "metadata": {},
    "source": [
     "### 5 yrs difference percentage"
@@ -1942,7 +1955,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7977937f",
+   "id": "d83b1735",
    "metadata": {},
    "outputs": [
     {
@@ -2113,6 +2126,7 @@
     }
    ],
    "source": [
+    "#Calculating the difference percentage for last 5 years\n",
     "price_dif_df = round(100 * (sp500_5yr_return_df[\"close_five\"] - sp500_5yr_return_df[\"close\"])/sp500_5yr_return_df[\"close\"],2)\n",
     "sp500_5yr_return_df[\"5yrs_dif (%)\"] = price_dif_df\n",
     "sp500_5yr_return_df.head()"
@@ -2121,7 +2135,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3c7a39c3",
+   "id": "e9de8314",
    "metadata": {},
    "outputs": [
     {
@@ -2138,6 +2152,7 @@
     }
    ],
    "source": [
+    "#Create chart for SPHQ 5 years\n",
     "plt.figure(figsize = (20,10))\n",
     "plt.plot(sp500_5yr_return_df[\"date\"],sp500_5yr_return_df[\"5yrs_dif (%)\"], label = \"S&P500\")\n",
     "\n",
@@ -2176,7 +2191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e2dea11",
+   "id": "850241b4",
    "metadata": {},
    "source": [
     "# Last 5 yrs plot of BTC with Regression Line"
@@ -2185,17 +2200,18 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "66bff3c5",
+   "id": "1fdb9f8b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Sort value to make data frame for 5 years bitcoin\n",
     "btc_5yr_df = bitcoin_df.loc[bitcoin_df[\"date\"] >= '2018-01-01']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "5b42ed15",
+   "id": "91f0b798",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2205,7 +2221,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4f98cf11",
+   "id": "323d35fc",
    "metadata": {},
    "outputs": [
     {
@@ -2408,7 +2424,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "e6b31d09",
+   "id": "a1da4c6c",
    "metadata": {},
    "outputs": [
     {
@@ -2423,6 +2439,7 @@
     }
    ],
    "source": [
+    "#Calculating the daily change for 5 years for bitcoin\n",
     "mean_5yr = btc_5yr_df[\"daily change (%)\"].mean()\n",
     "mean_5yr"
    ]
@@ -2430,7 +2447,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "677eae31",
+   "id": "73470323",
    "metadata": {},
    "outputs": [
     {
@@ -2454,6 +2471,7 @@
     }
    ],
    "source": [
+    "#Plot bitcoin 5 year price\n",
     "x_values = btc_5yr_df.index\n",
     "y_values = btc_5yr_df[\"close\"]\n",
     "\n",
@@ -2478,7 +2496,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ffa5c6dc",
+   "id": "06a3d6a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2486,32 +2504,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "97a74666",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z_score = st.zscore(y_values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "e073256a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z_score_list = []\n",
-    "for x in z_score:\n",
-    "    if abs(x) >= 1.8:\n",
-    "        z_score_list.append(x)\n",
-    "    "
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "68a65577",
+   "id": "a15654cd",
    "metadata": {},
    "source": [
     "# Yearly Correlation Between BTC and S&P500"
@@ -2520,7 +2514,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "8bfa2478",
+   "id": "00d70d55",
    "metadata": {},
    "outputs": [
     {
@@ -2654,7 +2648,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "3d93af8d",
+   "id": "27c52e76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2664,7 +2658,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b991b19a",
+   "id": "a17861e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2680,7 +2674,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b5fd11d4",
+   "id": "3126a5f3",
    "metadata": {},
    "outputs": [
     {
@@ -2698,6 +2692,7 @@
     }
    ],
    "source": [
+    "#Calculating the correlation between sp500 and btc\n",
     "print(\"Correlation by the Year:\")\n",
     "\n",
     "for df in dfs:\n",
@@ -2714,8 +2709,148 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "928cc3ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculate the long term return for SP500\n",
+    "sp500_5yr_return = sp500_df.iloc[1830:4325,:]\n",
+    "sp500_5yr_return = sp500_5yr_return.reset_index()\n",
+    "compare_sp500_return = sp500_df.join(sp500_5yr_return,rsuffix = \"_six\")\n",
+    "compare_sp500_return = compare_sp500_return.dropna()\n",
+    "compare_sp500_return\n",
+    "price_dif_sp500 = round(100 * (compare_sp500_return[\"close_six\"] - compare_sp500_return[\"close\"])/compare_sp500_return[\"close\"],2)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "82e0832a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>5_year_dif (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2005-12-06</td>\n",
+       "      <td>9.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2005-12-07</td>\n",
+       "      <td>11.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2005-12-08</td>\n",
+       "      <td>10.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2005-12-09</td>\n",
+       "      <td>10.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2005-12-12</td>\n",
+       "      <td>9.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2490</th>\n",
+       "      <td>2015-10-29</td>\n",
+       "      <td>100.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2491</th>\n",
+       "      <td>2015-10-30</td>\n",
+       "      <td>98.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2492</th>\n",
+       "      <td>2015-11-02</td>\n",
+       "      <td>95.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2493</th>\n",
+       "      <td>2015-11-03</td>\n",
+       "      <td>96.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2494</th>\n",
+       "      <td>2015-11-04</td>\n",
+       "      <td>99.36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2495 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date  5_year_dif (%)\n",
+       "0     2005-12-06            9.81\n",
+       "1     2005-12-07           11.85\n",
+       "2     2005-12-08           10.44\n",
+       "3     2005-12-09           10.66\n",
+       "4     2005-12-12            9.83\n",
+       "...          ...             ...\n",
+       "2490  2015-10-29          100.64\n",
+       "2491  2015-10-30           98.80\n",
+       "2492  2015-11-02           95.81\n",
+       "2493  2015-11-03           96.70\n",
+       "2494  2015-11-04           99.36\n",
+       "\n",
+       "[2495 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Create new column for profit after 5 years and display only 2 columns\n",
+    "compare_sp500_return[\"5_year_dif (%)\"] = price_dif_sp500\n",
+    "compare_sp500_return[[\"date\",\"5_year_dif (%)\"]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "201fc5c5",
+   "id": "11a65f83",
    "metadata": {},
    "outputs": [],
    "source": []
